[tool.poetry]
name = "qosst-skr"
version = "0.10.0"
description = "Secret Key Rate (SKR) submodule of QOSST, with the different methods to compute the Secret Key Rate."
authors = ["Yoann Piétri <Yoann.Pietri@lip6.fr>"]
packages = [{ include = "qosst_skr" }, { include = "qosst_skr/py.typed" }]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/qosst"
repository = "https://github.com/qosst/qosst-skr"
documentation = "https://qosst-skr.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]
[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qosst-core = "^0.10.0"

[tool.poetry.group.dev.dependencies]
myst-parser = "^1.0.0"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
setuptools = "^67.6.1"
docstr-coverage = "^2.2.0"
pylint = "^2.17.4"
black = "^23.3.0"
mypy = "^1.3.0"
sphinx-prompt = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
